feat: implementa scraper e JPA para BDRs (v9 → v10)
Implementa funcionalidade completa de scraping e persistência para BDRs

### Principais mudanças (v9 → v10):

**Scraper BDR:**
- Adiciona BdrApiScraper para coleta de dados via API
- Implementa BdrCardsScraper para extração de cards informativos
- Cria BdrHeaderScraper para dados do cabeçalho
- Desenvolve BdrInfoSobreScraper para informações detalhadas
- Adiciona BdrPlaywrightDirectScraperAdapter como adaptador principal

**DTOs e Mapeamento:**
- Cria BdrDadosFinanceirosDTO para estruturação dos dados
- Implementa DTOs auxiliares: Demonstrativos, InfoCards, InfoHeader, InfoSobre
- Adiciona BdrScraperMapper para conversão de dados

**Persistência JPA:**
- Implementa BdrEntity para mapeamento ORM
- Cria BdrJpaRepository para operações de banco
- Desenvolve BdrRepositoryAdapter seguindo padrão hexagonal
- Adiciona BdrPersistenceMapper para conversão entidade/domínio

**Serviços e Casos de Uso:**
- Implementa BdrUseCaseService para regras de negócio
- Integra com sistema de classificação de ativos existente

### Arquitetura:
- Mantém padrão hexagonal (ports & adapters)
- Segue princípios de Clean Architecture
- Implementa separação clara entre domínio, aplicação e infraestrutura